# cctl-rs

./: Cargo.toml  LICENSE  docker-image.nix  flake.nix  overlay.nix  package.nix
.github/workflows/: check.yml
dummy-contract/: Cargo.toml  default.nix
dummy-contract/src/: main.rs
nixos/: default.nix
nixos/modules/: cctl.nix
nixos/tests/: verify-cctl-service.nix
src/: cctl.rs  lib.rs  parsers.rs
test-resources/: demo-contract-optimized.wasm  dummy-contract.wasm
tests/: test_cctl_deploys_a_contract_successfully.rs  test_cctl_network_starts_and_terminates.rs
